<resources>
    <string name="app_name">FishApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="deskripsi_nemo">Ikan giru atau lebih dikenal dengan sebutan ikan badut adalah ikan dari anak suku Amphiprioninae dalam suku Pomacentridae. Ada dua puluh delapan spesies yang biasa dikenali, salah satunya adalah genus Premnas, sementara sisanya termasuk dalam genus Amphiprion.Ikan nemo atau ikan badut sejenis ikan hias yang mampu hidup 3 hingga 6 tahun, terutama di Samudera Pasifik dan Hidia. Ikan ini memiliki ukuran sekitar 7,5 hingga 10 cm. Ikan badut yang masih liar terkenal sangat sulit untuk menyesuaikan diri dengan lingkungan baru sehingga direkomendasikan untuk memelihara ikan badut hasil penangkaran.</string>
    <string name="deskripsi_discus">Ikan discus ini memiliki bentuk cakram yang ramping dan pipih mirip, seperti sebuah disc dengan ukuran tubuh 20 hingga 25 cm bergantung pada jenisnya. Termasuk ke dalam ikan hias berumur panjang. Saat ini, banyak sekali pecinta ikan hias yang membudidayakan ikan hias dan telah menghasilkan berbagai variasi corak warna yang cerah dan cemerlang yang menambah kecantikan ikan discus. Ikan discus yang dibudidayakan di akuarium, memiliki ketahanan tubuh yang kurang dibandingkan dengan ikan discus liar. Ikan hias ini memiliki berbagai jenis dengan keindahannya masing-masing.\n\nBeberapa jenis ikan ini di antaranya adalah Marlboro Super Red, Ruby Spotted Snake, Red Dragon Pigeon, Melon, Red Leopard SnakeSkin, Oriental Leopard, Web Pigeon, Pigeon Pearl, Asian Dream, Sunset Tiger, Red Spotted Amazon Green, Marlboro SnakeSkin, Red Anaconda, Scorpion Snake Skins, Blue Diamond, Striated Cobalt, Leopard SnakeSkin,  Red Spotted SnakeSkin, dan masih banyak jenis lainnya.</string>
    <string name="deskripsi_guppy">Guppy adalah ikan air tawar tropis. Ikan ini aslinya berasal dari wilayah Amerika Tengah dan Selatan. Ikan ini baru masuk ke Indonesia pada tahun 1920-an. Diperkenalkan sebagai ikan akuarium. Kemudian dilepas ke alam bebas dan beranak-pinak dengan bebas. Kini, mereka bisa ditemukan di hampir seluruh perairan air tawar Indonesia.\n\nIkan ini memiliki lebih dari 300 jenis. Masing-masing memiliki, warna, ukuran, dan bentuk ekor yang unik. Namun, secara perilaku, ikan ini kurang lebih sama. Semua memiliki pembawaan yang tenang dan damai. Artinya, mereka tidak agresif terhadap ikan lain di habitatnya. Membuatnya jadi peliharaan yang ideal. Khususnya bagi para pemula.</string>
    <string name="deskripsi_kaoskaki">Ikan Kaos Kaki (Leporinus Fasciatus) memiliki tampilan sangat lucu, bermotif garis-garis yang mirip sekali dengan kaos kaki. Pertumbuhan tubuhnya cukup pesat jika dibanding lainnya sehingga apabila ditempatkan pada satu aquarium akan tampak perbedaannya.Leporinus Fasciatus berasal dari lembah Amazon, wilayah Venezuela, Amerika Selatan.\n\nCiri fisik ikan Kaos Kaki (Leporinus Fasciatus) memiliki bentuk tubuh yang bulat dan panjang yang disertai motif belang-belang kombinasi hitam dan oranye. Untuk usia dewasa, biasanya garis di badannya berjumlah 10 buah.terdapat garis kuning di kepala, tepat berada di bagian bawah mata sebelah kanan dan kiri yang memanjang mulai dari mulut sampai ke sirip pada insang.\n\nIkan ini dapat meloncat cukup tinggi hingga keluar aquarium apabila lampunya dimatikan. Maka jika ingin memeliharanya, diharapkan memberi penutup pada bagian atas agar tidak terjadi hal yang tidak diinginkan.</string>
    <string name="deskripsi_neontetra">Neon Tetra adalah salah satu jenis ikan neon yang paling banyak diburu oleh para pecinta ikan hias. Pasalnya ikan ini memiliki keindahan tubuh yang sangat luar biasa.Dari kepala sampai ekornya terdapat tiga warna yang cukup kontras, yaitu berwarna perak yang berkilau di perutnya, berwarna biru di punggungnya, dan berwarna merah di bagian ekor sampai sirip tengahnya.\n\nIkan ini juga dapat terlihat menyala seperti lampu neon jika mereka berada di tempat yang gelap pada saat mereka aktif.Sedangkan pada saat mereka istirahat warna tersebut akan semakin meredup menjadi abu – abu.\n\nPeliharalah ikan ini dalam jumlah minimal 5 – 6 ekor, pasanya ikan ini hidup secara bergerombol. Dengan demikian sang ikan akan nyaman berada di dalam akuarium anda.</string>
    <string name="satu">Bersihkan menggunakan lap basah dan produk pembersih agar akuarium steril.</string>
    <string name="dua">Hal terpenting dalam sebuah aquascape adalah dasar yang mampu menopang mikro ekosistem yang nantinya dibuat. Letakkan pasir silika ke dalam akuarium dengan ketebalan sekitar 2–3 cm dan buat cekungan di tengah-tengahnya. Jangan lewatkan cekungan tersebut, karena cekungan tersebut diperuntukkan sebagai tempat karbon aktif dan pupuk.</string>
    <string name="tiga">Letakkan karbon aktif secukupnya di bagian cekungan yang telah disiapkan. Karbon aktif berfungsi sebagai penyerap zat-zat berbahaya yang ada pada air.</string>
    <string name="empat">Letakkan pupuk pada cekungan dengan ketebalan sekitar 2–3 cm. Cekungan tersebut dibuat agar pupuk yang diletakkan pada akuarium tidak terlalu terlihat dari luar. Karena dapat mengurangi keindahan aquascape. Pupuk ini berfungsi sebagai sumber nutrisi bagi mikro ekosistem aquascape.</string>
    <string name="lima">Saat pupuk sudah diletakkan merata pada cekungan, kamu harus menutup tumpukan pupuk tersebut dengan pasir. Ini ditujukan agar pupuk semakin tidak terlihat dari luar akuarium.</string>
    <string name="enam">Kini tiba pada cara membuat aquascape yang paling ditunggu-tunggu, yaitu tahap mendekorasi. Soal dekorasi, anda bisa menyesuaikannya dengan preferensi sendiri. Setidaknya kayu dan bebatuan ditata dengan seimbang agar cantik dipandang.</string>
    <string name="tujuh">Sebelum meletakkan tanaman, isilah akuarium dengan air bersih. Volume airnya kira-kira seperempat dari volume akuarium. Masukkan air dengan perlahan agar tidak merusak dekorasi yang telah anda buat. Untuk memudahkan proses penanaman, anda bisa menggunakan alat bantu seperti pinset.</string>
    <string name="delapan">Setelah selesai tahap menanam, anda bisa mulai mengisi penuh akuarium dengan air bersih. Tetap isi dengan perlahan agar penataannya tidak rusak. Kalau sudah diisi penuh, buang volume air sebanyak 70%. Ini ditujukan untuk membuang kotoran dan zat-zat berbahaya yang ada. Kalau sudah, silakan isi lagi akuarium dengan air bersih hingga penuh.</string>
    <string name="sembilan">Selanjutnya pasang semua alat pendukung mulai dari pompa, saringan, diffuser CO2, dan lampu hias. Untuk lampu, jangan dinyalakan terus menerus. Cukup nyalakan sekitar 8–10 jam setiap harinya.</string>
    <string name="sepuluh">- Pada minggu pertama, buang 30% volume air setiap hari dan ganti dengan air bersih yang baru.\n- Pada minggu kedua, buang 30% air setiap 3 hari sekali dan ganti dengan air bersih yang baru.\n-Lewat minggu kedua, ganti air aquascape 1 minggu sekali.</string>
    <string name="sebelas">Fauna baru boleh dimasukkan setelah lewat dari dua minggu pertama pembuatan aquascape. Ini karena aquascape masih mengandung banyak kotoran dan zat-zat berbahaya bagi fauna.</string>
    <string name="satu_akuarium">- Kapasity : menampung sekira 1,2 liter air\n- Cocok ditaruh : Aquarium jenis ini sangat cocok ditaruh di kamar anak karena bentuknya yang kecil dan lucu\n- Harga : berkisar Rp. 30.000,-\n- Karena bentuknya yang kecil, akuarium ini tidak dapat menampung banyak ikan.</string>
    <string name="dua_akuarium">- Kapasity : 500 ml - 1 liter air\n- Cocok ditaruh : meja kerja atau meja ruang tamuHarga : berkisar Rp. 80.000,-\n- Akuarium ini cocok untuk anda yang tidak terlalu suka akuarium besar dan terbuat dari material akrilik. Karena ukuran yang kecil, anda bisa menaruh banyak ikan di sini. Anda bisa menaruh beberapa ekor ikan cupang dalam akuarium ini.</string>
    <string name="tiga_akuarium">Kapasity : 500 ml - 1 liter air\n- Cocok ditaruh : ruang tamu dan ruang keluarga\n- Harga : berkisar Rp. 120.000,-\n- Kaca akuarium tabung ini terbuat dari material mika. Akuarium ini juga dilengkapi lampu led 3 watt. Bentuk tabung yang berukuran kecil serta memancarkan cahaya menjadi dekorasi yang bisa mempercantik ruangan. Anda bisa menaruh beberapa ikan kecil semisal ikan gupi, ikan molly, atau ikan platy.</string>
    <string name="empat_akuarium">Kapasity : 24 cm x 15 cm x 16 cm\n- Cocok ditaruh : ruang tamu dan ruang keluarga\n-nHarga : berkisar Rp. 150.000,-\n- Satu set akuarium juga dilengkapi lampu led 2,8 watt, filter internal, hiasan batu karang, bunga mini, beberapa batu, dan rumput mini. Dengan akuarium ini, anda bisa memelihara beberapa ikan berukuran kecil dan sedang.</string>
    <string name="lima_akuarium">Kapasity : 30 cm x 25 cm x 25 cm\n- Cocok ditaruh : ruang tamu dan ruang keluarga\n- Harga : berkisar Rp. 275.000,-\n- Akuarium ini memiliki ukuran dimensi dengan ketebalan kaca bawah akuarium sekitar 8 mili dan ketebalan kaca atas eekitar 5 mili. Anda bisa mendapat harga aquarium ini senilai Rp275 ribu, sudah termasuk beberapa dekorasi, semisal pasir putih dan tanaman plastik</string>
    <string name="satu_aerator">Pompa celup ini hadir untuk akuarium mungil berukuran 40–60 cm. Dapat digunakan untuk aquascape atau mesin air terjun dan dapat digunakan untuk air laut atau air tawar. Pompa yang digunakan dalam keadaan tenggelam ini sudah dilengkapi dengan sirkulasi oksigen. Kedalaman maksimumnya adalah 90 cm.</string>
    <string name="dua_aerator">Seperti namanya, heater memang digunakan untuk meningkatkan suhu air akuarium agar menjadi lebih panas. Anda wajib menggunakannya untuk ikan hias jenis khusus yang habitat aslinya adalah air hangat. Jika kondisi air tidak disesuaikan dengan habitat asli, ikan bisa stress dan mati. Selain menyesuaikan suhu, akuarium juga berfungsi untuk membunuh jamur dan bakteri yang ada di dalam akuarium. Periha Water Heater Aquarium memiliki tegangan listrik 50 Watt.</string>
    <string name="tiga_aerator">Jika memelihara ikan, pastikan mereka mendapat asupan oksigen yang cukup untuk bertahan hidup. Karena tidak ada oksigen alami di dalam akuarium, anda akan membutuhkan pompa aerasi. Resun LP 100 Pompa Aerator dilengkapi dengan fitur-fitur seperti karet diafragma, pembuangan panas dan suara rendah, serta dapat dipakai di berbagai jenis akuarium. Produk ini memiliki tegangan 100 watt.</string>
    <string name="empat_aerator">Batu Aerator / Batu Aerasi ukuran Dia 1 cm T 1.5 cm terbuat dari bahan berkualitas dalam temperatur yang tinggi, punya ketahanan yang baik saat digunakan. Batu ini juga mudah dibersihkan, sehingga anda bisa menggunakannya dalam waktu lama. Kadar oksigen batu juga lebih merata sehingg baik untuk menjaga kehidupan ikan di dalam akuarium.</string>
    <string name="lima_aerator">Hang On Back HOB filter gantung MB-401 Marine blue aquarium akuarium S dapat mengurangi resiko arus pendek listrik. Di dalam tank terdapat power head, sehingga tidak perlu mengisi air box terlebih dulu. Filter warna hitam ini adalah aksesoris wajib buat akuarium milikmu.</string>
    <string name="satu_pakan">Makanan ikan alami yang pertama yaitu jentik nyamuk. Kandungan protein pada jentik nyamuk memenuhi gizi ikan dan membantu ikan hias dalam proses reproduksi. Selain itu, banyak ikan hias kecil yang menyukainya.</string>
    <string name="dua_pakan">Kutu air merupakan makanan ikan hias yang banyak mengandung protein dan berguna untuk mencerahkan warna ikan hias.</string>
    <string name="tiga_pakan">Makanan ikan selanjutnya yaitu cacing sutera. Makanan ini juga bermanfaat untuk mencerahkan warna ikan hias, utamanya untuk ikan-ikan hias kecil.</string>
    <string name="empat_pakan">Artemia merupakan jenis udang berukuran kecil. Artemia cocok untuk diberikan pada ikan hias yang masih berukuran kanak-kanak atau bayi (burayak). </string>
</resources>